# banking-api

./: CHANGELOG.md  README.md  docker-compose.yml
account-service/: .env  pyproject.toml
account-service/alembic/: env.py
account-service/alembic/versions/: b7de8ab8833d_init.py
account-service/app/: config.py  consumer.py  database.py  dependencies.py  events.py  main.py  producer.py  repositories.py  router.py  schemas.py  services.py  unitofwork.py
payment-service/: .env  .gitignore  pyproject.toml
payment-service/alembic/versions/: e479cb9237c4_init.py
payment-service/app/: config.py  consumer.py  database.py  events.py  main.py  schemas.py
report-service/: .env  .gitignore  Dockerfile  pyproject.toml
report-service/alembic/versions/: ac3a69c7e3c3_fk.py  d494b9e3c475_init.py
report-service/app/: config.py  consumer.py  database.py  events.py  main.py
