[tool.poetry]
name = "report-service"
version = "0.1.0"
description = ""
authors = ["Mark B. <mark.bobkov.13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.28"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
greenlet = "^3.0.3"
aiokafka = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
